# CineReserve-API

./: .env  .env.example  .gitignore  README.md  build.sh  docker-compose.yml  dockerfile  manage.py  populate.py  pyproject.toml
cinereserve/: settings.py  urls.py
movies/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
movies/migrations/: 0001_initial.py
reservations/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
reservations/migrations/: 0001_initial.py  0002_initial.py
users/: serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py
