[project]
name = "cinereserve"
version = "0.1.0"
description = ""
authors = [
    {name = "Júlia Forny de Souza Muniz",email = "forny918@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-filter (>=25.2,<26.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
